[gd_scene load_steps=3 format=3 uid="uid://char_edit_dialog"]

[ext_resource type="Script" path="res://pages/characters/CharacterEditDialog.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.1, 0.1, 0.1, 0.95)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="CharacterEditDialog" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -600.0
offset_right = 400.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "编辑角色"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "角色名称"

[node name="PromptInput" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
placeholder_text = "系统提示词 (System Prompt)"
wrap_mode = 1

[node name="ModelPathLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "3D模型: 未选择"

[node name="ImportBtn" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "导入 3D 模型 (.glb / .gltf)"

[node name="SetActiveBtn" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "设为当前角色"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SaveBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "保存"

[node name="DeleteBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "删除"

[node name="CancelBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "取消"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(800, 1000)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.glb", "*.gltf")
